--- a/core/new-gui/src/app/workspace/component/navigation/navigation.component.scss
+++ b/core/new-gui/src/app/workspace/component/navigation/navigation.component.scss
@@ -1,17 +1,34 @@
 @import '../workspace.component.scss';
 .texera-navigation-body {
   height: 100%;
+  width: 100%;
   padding-left: 24px;
   padding-right: 24px;
 }
-
 .button {
   display: inherit;
   .btn.btn-secondary {
     margin-right: 5px;
   }
 }
-
+.zoom-button:hover {
+    cursor: pointer;
+    color: gray;
+}
+.texera-navigation-body{
+  .texera-navigation-run-button {
+    margin-right: 3%;
+    .mat-raised-button {
+      height: 30px;
+    }
+    .texera-navigation-run-text {
+      font-size: 1rem;
+    }
+    .fa {
+      font-size: 1rem;
+      padding-right: 6px;
+    }
+  }
 .texera-navigation-run-text {
   font-size: 1rem;
 }
@@ -36,3 +53,4 @@
   font-size: 10px;
 }
 
+}
