add services to fix the bug of the value conflict between mouse wheel and button zoom

--- a/core/new-gui/src/app/workspace/component/navigation/navigation.component.html
+++ b/core/new-gui/src/app/workspace/component/navigation/navigation.component.html
@@ -3,6 +3,9 @@
     <a class="navbar-brand" href="#">
         Texera <span class="version-number">0.3.0</span>
       </a>
+    <span class = "fas fa-trash-alt"(click)= "onClickDelete()">
+
+    </span>
     <span (click)="onClickUtility()">
         <i class="navbar-brand zoom-button fa fa-play-circle"></i>
     </span>
