--- a/core/new-gui/src/app/workspace/component/workspace.component.scss
+++ b/core/new-gui/src/app/workspace/component/workspace.component.scss
@@ -32,10 +32,11 @@
   */
   $header-height: 56px;
   $resultbar-height: 25px;
+  $previewmap-height: 0px;
 .texera-workspace-grid-container {
   display: grid;
   grid-template-columns: 14% 70% 16%;
-  grid-template-rows: $header-height calc((100% - #{$header-height} - #{$resultbar-height}) * 0.75) $resultbar-height calc((100% - #{$header-height} - #{$resultbar-height}) * 0.25)
+  grid-template-rows: $header-height calc((100% - #{$header-height} - #{$resultbar-height}) * 0.75) $resultbar-height calc((100% - #{$header-height} - #{$resultbar-height}) * 0.25) 
 }
 
 /**
@@ -88,7 +89,7 @@
   grid-column-start: 3;
   grid-column-end: 4;
   grid-row-start: 2;
-  grid-row-end: 5;
+  grid-row-end: 3;
   overflow: auto;
 }
 
@@ -132,5 +133,5 @@
   grid-column-start: 3;
   grid-column-end: 4;
   grid-row-start: 3;
-  grid-row-end: 4;
+  grid-row-end: 5;
 }
