final thesis, and combiine preview map with zoom-drag

--- a/core/new-gui/src/app/workspace/component/navigation/navigation.component.html
+++ b/core/new-gui/src/app/workspace/component/navigation/navigation.component.html
@@ -2,10 +2,18 @@
 <nav class="texera-navigation-body navbar navbar-expand-sm bg-dark navbar-dark justify-content-between">
     <a class="navbar-brand" href="#">
         Texera <span class="version-number">0.3.0</span>
-      </a>
-    <span class = "fas fa-trash-alt"(click)= "onClickDelete()">
+    </a>
+    <button class="btn btn-secondary" (mouseenter) = 'mouseEnter()' (mouseleave) = 'mouseLeave()'>
+      <span>
+        <i class="fa fa-question" aria-hidden="true"></i>
+      </span>
+    </button>
 
-    </span>
+    <!-- <span class = "navbar-brand fa fa-recycle"(click)= "onClickDelete()">
+
+    </span> -->
+
+    <!-- <span class = "fa fa-"> -->
     <span (click)="onClickUtility()">
         <i class="navbar-brand zoom-button fa fa-play-circle"></i>
     </span>
