--- a/core/new-gui/src/app/workspace/component/preview-map/preview-map.component.scss
+++ b/core/new-gui/src/app/workspace/component/preview-map/preview-map.component.scss
@@ -1,7 +1,9 @@
-// .texera-workspace-workflow-preview {
-//    overflow: hidden;
-// }
+
 .texera-workspace-workflow-editor-preview-body {
     width: 100%;
     height: 100%;
+    
+}
+.texera-workspace-workflow-preview {
+    background-color: #f2f2f2;
 }
