--- a/core/new-gui/src/app/workspace/component/navigation/navigation.component.html
+++ b/core/new-gui/src/app/workspace/component/navigation/navigation.component.html
@@ -3,19 +3,8 @@
     <a class="navbar-brand" href="#">
         Texera <span class="version-number">0.3.0</span>
     </a>
-    <button class="btn btn-secondary" (mouseenter) = 'mouseEnter()' (mouseleave) = 'mouseLeave()'>
-      <span>
-        <i class="fa fa-question" aria-hidden="true"></i>
-      </span>
-    </button>
+    <span class="navbar-brand zoom-button fa fa-play-circle" (click)="loadTemplate()">
 
-    <!-- <span class = "navbar-brand fa fa-recycle"(click)= "onClickDelete()">
-
-    </span> -->
-
-    <!-- <span class = "fa fa-"> -->
-    <span (click)="onClickUtility()">
-        <i class="navbar-brand zoom-button fa fa-play-circle"></i>
     </span>
     <span (click)="onClickZoomOut()">
       <i class="navbar-brand zoom-button fa fa-search-minus"></i>
